Add custom Noto Sans font

--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="/src/style.css" rel="stylesheet">
-  <title>Document</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="/src/style.css" rel="stylesheet">
+	<title>BEM</title>
 </head>
 
 <body>
-  <button id="btn">
-    klik saya
-  </button>
+	<p class="font-primary">
+		Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim tempora commodi officiis error necessitatibus incidunt consequatur perferendis, facere minima dolores soluta aliquid! Id ducimus excepturi error voluptatum illo vel a qui nostrum consequatur. Nam saepe modi cumque incidunt eius error odit mollitia omnis vitae repudiandae ad molestiae, deserunt unde nihil.
+	</p>
 
-  <script type="module" src="src/main.js"></script>
+	<script type="module" src="src/main.js"></script>
 </body>
 
 </html>
