fix: Get data dinamycally from data.json and add funcionality to toggle

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				</svg>
 			</div>
 			<label for="ThemeToggle"
-				class="group flex justify-center items-center p-3 rounded-md bg-gray-200 transition-colors has-checked:bg-gray-700 cursor-pointer">
+				class="group flex justify-center items-center p-2 rounded-md bg-gray-200 transition-colors has-checked:bg-gray-700 cursor-pointer">
 				<input type="checkbox" id="ThemeToggle" class="peer sr-only" />
 
 				<span
@@ -52,29 +52,7 @@
 					class="bg-white text-slate-800 px-5 py-2 rounded-full font-medium shadow-md text-lg cursor-pointer dark:bg-slate-800 dark:text-gray-50 dark:ring dark:ring-gray-50/50">Inactive</button>
 			</div>
 
-			<section class="mt-8">
-				<div class="bg-white p-5 mb-5 rounded-xl shadow-md clear-both dark:bg-slate-800 dark:ring dark:ring-gray-50/50">
-					<div>
-						<img src="./src/assets/images/logo-devlens.svg" alt="Dev Lens" class="float-left mr-3">
-						<div>
-							<h3 class="font-bold text-2xl text-slate-800 dark:text-gray-50">DevLens</h3>
-							<p class="text-slate-800 text-[1rem] dark:text-gray-300">Lorem ipsum dolor sit amet, consectetur adipisicing
-								elit.</p>
-						</div>
-					</div>
-					<div class="mt-5 flex justify-between items-center">
-						<button
-							class="bg-white text-slate-600 px-4 py-2 rounded-full font-bold cursor-pointer border border-zinc-300 dark:text-gray-50 dark:bg-slate-800 dark:border-0 dark:ring dark:ring-gray-50/50">Remove</button>
-						<label for="ActivateExtension"
-							class="relative block h-6 w-11 rounded-full bg-red-700 dark:bg-red-500 transition-colors [-webkit-tap-highlight-color:_transparent]">
-							<input type="checkbox" id="ActivateExtension" class="peer sr-only" />
-
-							<span
-								class="absolute inset-y-0 start-0 m-1 size-4 rounded-full bg-white transition-[inset-inline-start] peer-checked:start-5"></span>
-						</label>
-					</div>
-				</div>
-			</section>
+			<section class="mt-8" id="main"></section>
 		</main>
 	</div>
 
